force-app/main/default/objects/Account/fields/Current_Stored_Value_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Current_Stored_Value_Vendor__c</fullName>
    <label>Current Stored Value Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brink</fullName>
            </value>
            <value>
                <fullName>Givex</fullName>
            </value>
            <value>
                <fullName>LevelUp</fullName>
            </value>
            <value>
                <fullName>Opticard</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>Paytronix</fullName>
            </value>
            <value>
                <fullName>Punchh</fullName>
            </value>
            <value>
                <fullName>Revel</fullName>
            </value>
            <value>
                <fullName>Stored Value Systems</fullName>
            </value>
            <value>
                <fullName>Toast</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>