force-app/main/default/objects/Account/fields/Current_Year_Commit_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Commit_Opportunities__c</fullName>
    <label>2023 Commit Opportunities</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Forecast_Category__c</field>
        <operation>equals</operation>
        <value>Commit</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>greaterThan</operation>
        <value>12/31/2022</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>lessThan</operation>
        <value>1/1/2024</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>