force-app/main/default/objects/Account/fields/Customer_CDM_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_CDM_ID__c</fullName>
    <label>Customer CDM ID</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>