force-app/main/default/objects/Account/fields/Customer_Source__c.field-meta.xml
<CustomField>
    <fullName>Customer_Source__c</fullName>
    <label>Actual Customer Source</label>
    <length>10</length>
    <type>Text</type>
</CustomField>