force-app/main/default/objects/Account/fields/CX_Top_Accounts__c.field-meta.xml
<CustomField>
    <fullName>CX_Top_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CX Top Accounts</label>
    <type>Checkbox</type>
</CustomField>