force-app/main/default/objects/Account/fields/Dashboard_last_updated_on__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_last_updated_on__c</fullName>
    <description>This field is used to show last modified date of CPP data fields records and it is using to over IPT Dashboard.</description>
    <label>Dashboard last updated on</label>
    <type>Date</type>
</CustomField>