force-app/main/default/objects/Account/fields/Deliver_To__c.field-meta.xml
<CustomField>
    <fullName>Deliver_To__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deliver-To</label>
    <type>Checkbox</type>
</CustomField>