force-app/main/default/objects/Account/fields/DI_Customer__c.field-meta.xml
<CustomField>
    <fullName>DI_Customer__c</fullName>
    <description>For DI Sales Integration</description>
    <externalId>true</externalId>
    <label>DI Customer #</label>
    <length>5</length>
    <type>Text</type>
</CustomField>