force-app/main/default/objects/Account/fields/Diagnostic_Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic_Partner_Type__c</fullName>
    <description>Note: This field was requested to be removed from the layout by Jane green</description>
    <inlineHelpText>Used to create a &quot;Quicklook ID&quot; for a partner technician so diagnostic media can be issued.  This value is assigned at the partner level and is the 5th position of the Quicklook ID.</inlineHelpText>
    <label>Diagnostic Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>6 - ISO/OEM/Integrator</fullName>
            </value>
            <value>
                <fullName>7 - Self Maintainer/Customer Lab Use</fullName>
            </value>
            <value>
                <fullName>8 - Service Partner/International Distributor</fullName>
            </value>
            <value>
                <fullName>9 - Sub Contractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>