force-app/main/default/objects/Account/fields/Direct_Partner__c.field-meta.xml
<CustomField>
    <fullName>Direct_Partner__c</fullName>
    <formula>INCLUDES( Distributor__c , &apos;NCR (direct purchase from NCR)&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Partner</label>
    <type>Checkbox</type>
</CustomField>