force-app/main/default/objects/Account/fields/Domestic_Ultimate_Enterprise__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_Enterprise__c</fullName>
    <formula>IF(NOT(ISBLANK(Domestic_Ultimate_Lookup__c)), HYPERLINK(&apos;/&apos; + Domestic_Ultimate_Lookup__c, Domestic_Ultimate_Lookup__r.Name ) , HYPERLINK(&apos;/&apos; + Id, Name) )</formula>
    <label>Domestic Ultimate Enterprise</label>
    <type>Text</type>
</CustomField>