force-app/main/default/objects/Account/fields/Domestic_Ultimate_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Domestic Ultimate</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (DU Child Enterprises)</relationshipLabel>
    <relationshipName>DUChildAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>