force-app/main/default/objects/Account/fields/DPV_Provider__c.field-meta.xml
<CustomField>
    <fullName>DPV_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Core Provider for the Financial Institution, such as FIS, FiServ, Jack Henry, etc.</inlineHelpText>
    <label>DPV Provider</label>
    <referenceTo>Solution_Provider__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>DPV_Provider</relationshipName>
    <type>Lookup</type>
</CustomField>