force-app/main/default/objects/Account/fields/DPV_Software__c.field-meta.xml
<CustomField>
    <fullName>DPV_Software__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The specific software of the core provider deployed for the FI, such as Horizon.</inlineHelpText>
    <label>DPV Software</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Solution_Provider_Product__c.Solution_Provider_Id__c</field>
            <operation>equals</operation>
            <valueField>$Source.DPV_Provider__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Solution_Provider_Product__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>DPV_Software</relationshipName>
    <type>Lookup</type>
</CustomField>