force-app/main/default/objects/Account/fields/DUNS__c.field-meta.xml
<CustomField>
    <fullName>DUNS__c</fullName>
    <externalId>true</externalId>
    <label>DUNS Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>