force-app/main/default/objects/Account/fields/Enterprise_FI_Type__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_FI_Type__c</fullName>
    <description>Field migrated from customer object.</description>
    <label>Enterprise FI Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>