force-app/main/default/objects/Account/fields/Executive_Sponsorship_Program_2017__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsorship_Program_2017__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Top Accounts for Executive Sponsorship Program 2017. Requested from Tara Hannan 1/30/2017
Note: This field was requested to be removed from the layout by Jane green</description>
    <label>Executive Sponsorship Program 2017</label>
    <type>Checkbox</type>
</CustomField>