force-app/main/default/objects/Account/fields/Financial_Hardware_Auth_to_Maintain__c.field-meta.xml
<CustomField>
    <fullName>Financial_Hardware_Auth_to_Maintain__c</fullName>
    <label>Financial Hardware Auth to Maintain</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>ATM 20 Series</fullName>
            </value>
            <value>
                <fullName>ATM 80 series</fullName>
            </value>
            <value>
                <fullName>ATM 60 series</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>