force-app/main/default/objects/Account/fields/Financial_Products_Authorized_to_Resell__c.field-meta.xml
<CustomField>
    <fullName>Financial_Products_Authorized_to_Resell__c</fullName>
    <label>Financial Solutions Authorized to Resell</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ANDC</fullName>
                <label>AANDC</label>
            </value>
            <value>
                <fullName>Activate Enterprise</fullName>
            </value>
            <value>
                <fullName>ATM 20 Series</fullName>
            </value>
            <value>
                <fullName>ATM 60 series</fullName>
            </value>
            <value>
                <fullName>ATM 80 series</fullName>
            </value>
            <value>
                <fullName>ATM Marketing (NAMER SaaS Only)</fullName>
            </value>
            <value>
                <fullName>Authentic</fullName>
            </value>
            <value>
                <fullName>Authentic Cards</fullName>
            </value>
            <value>
                <fullName>Cash Management</fullName>
            </value>
            <value>
                <fullName>Digital Banking</fullName>
            </value>
            <value>
                <fullName>Endpoint Security</fullName>
            </value>
            <value>
                <fullName>Inetco Insight</fullName>
            </value>
            <value>
                <fullName>Interactive Banker/Enhanced Self-service Classic</fullName>
            </value>
            <value>
                <fullName>Interactive Teller (NAMER Only)</fullName>
            </value>
            <value>
                <fullName>NDC Enterprise</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Recycling SR</fullName>
            </value>
            <value>
                <fullName>Teller X Interactive Teller (CLA Only)</fullName>
            </value>
            <value>
                <fullName>Terminal Handler</fullName>
            </value>
            <value>
                <fullName>Transaction Gateway (NAMER/LATAM Only)</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>XFS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>