force-app/main/default/objects/Account/fields/Franchise_Flag__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field indicating the mcn is a franchisee.  Requested by Carolyn Muise &amp; Steve Thoma
Note: This field was requested to be removed from the layout by Jane green</description>
    <label>Franchise Flag</label>
    <type>Checkbox</type>
</CustomField>