force-app/main/default/objects/Account/fields/Fuel_Contoller__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Contoller__c</fullName>
    <label>Fuel Contoller</label>
    <length>50</length>
    <type>Text</type>
</CustomField>