force-app/main/default/objects/Account/fields/Gateway_Contract_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Contract_Expiration_Date__c</fullName>
    <label>Gateway Contract Expiration Date</label>
    <type>Date</type>
</CustomField>