force-app/main/default/objects/Account/fields/Global_Account_Brand__c.field-meta.xml
<CustomField>
    <fullName>Global_Account_Brand__c</fullName>
    <description>Field to Track Hospitality GAM Account brands- requested by Blake Davis</description>
    <label>Global Account Brand</label>
    <length>25</length>
    <type>Text</type>
</CustomField>