force-app/main/default/objects/Account/fields/Global_Sales_Org_Code__c.field-meta.xml
<CustomField>
    <fullName>Global_Sales_Org_Code__c</fullName>
    <label>Global Sales Org Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>