force-app/main/default/objects/Account/fields/Global_Ultimate_Enterprise__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_Enterprise__c</fullName>
    <formula>IF(NOT(ISBLANK(ParentId)), IF(NOT(ISBLANK(Parent.Global_Ultimate_Lookup__c)), HYPERLINK(&apos;/&apos; + Parent.Global_Ultimate_Lookup__c,  Parent.Global_Ultimate_Lookup__r.Name ) ,  HYPERLINK(&apos;/&apos; + ParentId,  Parent.Name )) ,  HYPERLINK(&apos;/&apos; + Id, Name))</formula>
    <label>Global Ultimate Enterprise</label>
    <type>Text</type>
</CustomField>