force-app/main/default/objects/Account/fields/Global_Ultimate_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field represents topmost Legal Entity this Enterprise/Customer belongs to.</description>
    <label>Global Ultimate</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (GU Child Enterprises)</relationshipLabel>
    <relationshipName>GUChildAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>