force-app/main/default/objects/Account/fields/Hard_Disk_Encryption__c.field-meta.xml
<CustomField>
    <fullName>Hard_Disk_Encryption__c</fullName>
    <inlineHelpText>What software does customer use for hard disk encryption?</inlineHelpText>
    <label>Hard Disk Encryption</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NCR: Managed Services</fullName>
            </value>
            <value>
                <fullName>Windows BitLocker + TPM</fullName>
            </value>
            <value>
                <fullName>McAfee Drive Encryption</fullName>
            </value>
            <value>
                <fullName>Symantec Endpoint Protection - Drive Encryption</fullName>
            </value>
            <value>
                <fullName>Diebold: Vynamic Disk Encryption</fullName>
            </value>
            <value>
                <fullName>Self Ecrypted Disk</fullName>
            </value>
            <value>
                <fullName>NCR: HD Encryption</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>In-house</fullName>
            </value>
            <value>
                <fullName>No Solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>