force-app/main/default/objects/Account/fields/Help_Desk_Provider__c.field-meta.xml
<CustomField>
    <fullName>Help_Desk_Provider__c</fullName>
    <label>Help Desk Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABRH</fullName>
            </value>
            <value>
                <fullName>Dumac</fullName>
            </value>
            <value>
                <fullName>Del Taco</fullName>
            </value>
            <value>
                <fullName>Resource POS</fullName>
            </value>
            <value>
                <fullName>RTG</fullName>
            </value>
            <value>
                <fullName>Self Supported</fullName>
            </value>
            <value>
                <fullName>Shanes</fullName>
            </value>
            <value>
                <fullName>Wendys</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>