force-app/main/default/objects/Account/fields/HSR_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>HSR_Short_Name__c</fullName>
    <label>HSR Short Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>