force-app/main/default/objects/Account/fields/Inside_Sales_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Rep_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inside Sales Rep Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>