force-app/main/default/objects/Account/fields/Interact_Reseller_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Interact_Reseller_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interact Reseller Agreement</label>
    <type>Checkbox</type>
</CustomField>