force-app/main/default/objects/Account/fields/Interactive_Teller__c.field-meta.xml
<CustomField>
    <fullName>Interactive_Teller__c</fullName>
    <inlineHelpText>What vendor is your customer using for interactive teller?</inlineHelpText>
    <label>Interactive Teller</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NCR</fullName>
            </value>
            <value>
                <fullName>Diebold</fullName>
            </value>
            <value>
                <fullName>Hyosung</fullName>
            </value>
            <value>
                <fullName>Glory</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>In-house</fullName>
            </value>
            <value>
                <fullName>No Solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>