force-app/main/default/objects/Account/fields/Interface_Source__c.field-meta.xml
<CustomField>
    <fullName>Interface_Source__c</fullName>
    <label>Interface Source</label>
    <length>20</length>
    <type>Text</type>
</CustomField>