force-app/main/default/objects/Account/fields/Interface_Type__c.field-meta.xml
<CustomField>
    <fullName>Interface_Type__c</fullName>
    <label>Interface Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Batch</fullName>
                <default>true</default>
                <label>Batch</label>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Real-Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>