force-app/main/default/objects/Account/fields/IPS_Area__c.field-meta.xml
<CustomField>
    <fullName>IPS_Area__c</fullName>
    <label>IPS Area</label>
    <length>20</length>
    <type>Text</type>
</CustomField>