force-app/main/default/objects/Account/fields/IPS_Region__c.field-meta.xml
<CustomField>
    <fullName>IPS_Region__c</fullName>
    <label>IPS Region</label>
    <length>20</length>
    <type>Text</type>
</CustomField>