force-app/main/default/objects/Account/fields/Is_IPT_Chat_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Is_IPT_Chat_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is IPT Chat Allowed</label>
    <type>Checkbox</type>
</CustomField>