force-app/main/default/objects/Account/fields/LOYALTY_SW__c.field-meta.xml
<CustomField>
    <fullName>LOYALTY_SW__c</fullName>
    <label>LOYALTY SW</label>
    <length>50</length>
    <type>Text</type>
</CustomField>