force-app/main/default/objects/Account/fields/LOYALTY_Version__c.field-meta.xml
<CustomField>
    <fullName>LOYALTY_Version__c</fullName>
    <label>LOYALTY Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>