force-app/main/default/objects/Account/fields/LSP_Consumer_Loans_Auto_HELOC__c.field-meta.xml
<CustomField>
    <fullName>LSP_Consumer_Loans_Auto_HELOC__c</fullName>
    <label>LSP-Consumer Loans (Auto, HELOC)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core Banking</fullName>
            </value>
            <value>
                <fullName>Finastra</fullName>
            </value>
            <value>
                <fullName>MeridianLink</fullName>
            </value>
            <value>
                <fullName>nCino</fullName>
            </value>
            <value>
                <fullName>Terafina</fullName>
            </value>
            <value>
                <fullName>Temenos AVOKA</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>