force-app/main/default/objects/Account/fields/LSP_Consumer_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>LSP_Consumer_Mortgage__c</fullName>
    <label>LSP-Consumer Mortgage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Black Knight</fullName>
            </value>
            <value>
                <fullName>Core Banking</fullName>
            </value>
            <value>
                <fullName>Encompass (Ellie Mae)</fullName>
            </value>
            <value>
                <fullName>Sagent Lending</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>