force-app/main/default/objects/Account/fields/Managed_Services_Customer__c.field-meta.xml
<CustomField>
    <fullName>Managed_Services_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Note: This field was requested to be removed from the layout by Jane green</description>
    <label>Managed Services Customer</label>
    <type>Checkbox</type>
</CustomField>