force-app/main/default/objects/Account/fields/Master_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Customer_Number__c</fullName>
    <externalId>true</externalId>
    <label>Master Customer Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>