force-app/main/default/objects/Account/fields/Master_Cutomer_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Master_Cutomer_Number_Formula__c</fullName>
    <description>This field is created for email template. Don&apos;t Delete.</description>
    <formula>Master_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Cutomer Number Formula</label>
    <type>Text</type>
</CustomField>